tests/baselines/reference/ThisInConstructorParameter1.errors.txt
==== tests/cases/compiler/thisInConstructorParameter1.ts (1 errors) ====
    class Foo {
        public y;
        constructor(x = this.y) { }
                        ~~~~
!!! thisInConstructorParameter1.ts(3,21): error TS2155: 'this' cannot be referenced in constructor arguments.
    }